update: swagger document & improve webhook logs
