# internal/domain/model/log.go
@@ -9,8 +9,6 @@ import (
 type Log struct {
 	gorm.Model
 	Status            enum.LogStatus `json:"status"`
-	WebhookSend       bool           `json:"webhookSend"`
-	WebhookError      string         `json:"webhookError"`
 	HasInfo           bool           `json:"hasInfo"`
 	TimeEstimated     int64          `json:"timeEstimated"`
 	TotalEpisodes     int            `json:"totalEpisodes"`
